tests/test_assets/semantic/invalid/definite_assignment/switch_missing_paths.expected
semantic error at line 17: variable 'value' may be uninitialized
semantic error at line 33: variable 'value' may be uninitialized
semantic error at line 49: variable 'value' may be uninitialized
semantic error at line 62: variable 'value' may be uninitialized
4 semantic errors generated.
